update comparing notebook

--- a/notebooks/chunking_comparison_unstructured_langchain.ipynb
+++ b/notebooks/chunking_comparison_unstructured_langchain.ipynb
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcdb81d0",
+   "id": "06f770d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,29 +28,13 @@
     "from langchain_experimental.text_splitter import SemanticChunker\n",
     "from unstructured.partition.api import partition_via_api\n",
     "from unstructured.documents.elements import Element\n",
-    "from IPython.display import display, HTML"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8522a789",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from IPython.display import display, HTML\n",
+    "\n",
     "# Функция для загрузки файла\n",
     "def load_file(file_path):\n",
     "    with open(file_path, \"rb\") as f:\n",
-    "        return f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06f770d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return f.read()\n",
+    "\n",
     "# Функция для парсинга с использованием unstructured\n",
     "def parse_with_unstructured(file_bytes, metadata_filename=\"document.docx\"):\n",
     "    file_obj = io.BytesIO(file_bytes)\n",
