update embeddings in comparing notebook

--- a/notebooks/chunking_comparison_unstructured_langchain.ipynb
+++ b/notebooks/chunking_comparison_unstructured_langchain.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install --quiet unstructured langchain langchain_openai langchain_experimental"
+    "!pip install --quiet unstructured langchain langchain_experimental openai\n"
    ]
   },
   {
@@ -24,11 +24,33 @@
     "# Импортирование библиотек\n",
     "import io\n",
     "import os\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain.embeddings import Embeddings\n",
     "from langchain_experimental.text_splitter import SemanticChunker\n",
     "from unstructured.partition.api import partition_via_api\n",
     "from unstructured.documents.elements import Element\n",
+    "from openai import OpenAI\n",
     "from IPython.display import display, HTML\n",
+    "\n",
+    "class CustomOllamaEmbeddings(Embeddings):\n",
+    "    def __init__(self):\n",
+    "        self.model_name = \"bge-m3\"\n",
+    "        self.client = OpenAI(\n",
+    "            base_url=\"http://10.41.56.9:12121/v1\",  # ваш локальный OpenAI API\n",
+    "            api_key=os.environ.get(\"LLM_API_KEY\", \"\"),  # ключ если нужен\n",
+    "        )\n",
+    "\n",
+    "    def embed_documents(self, texts):\n",
+    "        return self._get_embeddings(texts)\n",
+    "\n",
+    "    def embed_query(self, text):\n",
+    "        return self._get_embeddings([text])[0]\n",
+    "\n",
+    "    def _get_embeddings(self, input_texts):\n",
+    "        response = self.client.embeddings.create(\n",
+    "            model=self.model_name,\n",
+    "            input=input_texts\n",
+    "        )\n",
+    "        return [e.embedding for e in response.data]\n",
     "\n",
     "# Функция для загрузки файла\n",
     "def load_file(file_path):\n",
@@ -52,7 +74,7 @@
     "\n",
     "# Функция для парсинга с использованием langchain\n",
     "def parse_with_langchain(file_bytes):\n",
-    "    embeddings = OpenAIEmbeddings()\n",
+    "    embeddings = CustomOllamaEmbeddings()\n",
     "    splitter = SemanticChunker(embeddings)\n",
     "    text = file_bytes.decode(\"utf-8\")\n",
     "    chunks = splitter.split_text(text)\n",
